--- a/social-links-profile/index.html
+++ b/social-links-profile/index.html
@@ -11,7 +11,7 @@
       class="max-w-96 bg-[#1F1F1F] p-12 rounded-xl text-white space-y-8 text-center"
     >
       <img
-        src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        src="./img/dobby.webp"
         alt=""
         class="rounded-full w-32 h-32 object-cover mx-auto"
       />
