add links for the projects

--- a/index.html
+++ b/index.html
@@ -7,5 +7,21 @@
   </head>
   <body>
     <h1>Main page</h1>
+    <ul>
+      <li>
+        <a href="./apps-card/index.html">Apps Card</a>
+      </li>
+      <li>
+        <a href="./results-summary-component/index.html"
+          >Results Summary Component</a
+        >
+      </li>
+      <li>
+        <a href="./social-links-profile/">Social Links Profile</a>
+      </li>
+      <li>
+        <a href="./todo-component/">Todo Component</a>
+      </li>
+    </ul>
   </body>
 </html>
